--- a/OpenCV/01. 이미지 출력.ipynb
+++ b/OpenCV/01. 이미지 출력.ipynb
@@ -92,6 +92,38 @@
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d29fcc5e-3b86-4a1f-938f-6d884d0ada8f",
+   "metadata": {},
+   "source": [
+    "## Shape\n",
+    "이미지의 height, width, channel 정보"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3c7adbec-6a9e-42cb-b377-78781f5c62cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(387, 640, 3)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "img = cv2.imread('img.jpg')\n",
+    "img.shape # 가로, 세로, channel"
+   ]
   }
  ],
  "metadata": {
