--- a/OpenCV/02. 동영상 출력.ipynb
+++ b/OpenCV/02. 동영상 출력.ipynb
@@ -55,12 +55,12 @@
    "id": "eeb1aa09-00a3-4b97-9b76-25c0d004b7e2",
    "metadata": {},
    "source": [
-    "## 카메라 출력ㅠ"
+    "## 카메라 출력"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f2146eb2-3b12-470f-bac9-50281d30efcc",
    "metadata": {},
    "outputs": [],
@@ -79,8 +79,9 @@
     "    cv2.imshow('camera', frame)\n",
     "    if cv2.waitKey(1) == ord('q'):\n",
     "        break\n",
-    "c\n",
-    "    \n"
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
    ]
   }
  ],
