--- a/OpenCV/practice.ipynb
+++ b/OpenCV/practice.ipynb
@@ -71,6 +71,30 @@
     "video.release()\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bb2dfbf-c751-4418-9748-c0e258779868",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import cv2\n",
+    "\n",
+    "img = np.zeros((480,640,3), dtype=np.uint8)\n",
+    "img[:]=(255,0,0)\n",
+    "\n",
+    "SCALE = 1\n",
+    "COLOR = (255,255,255)\n",
+    "THICKNESS = 2\n",
+    "\n",
+    "cv2.putText(img, \"hahaha\", (20,50), cv2.FONT_HERSHEY_SIMPLEX, SCALE, COLOR, THICKNESS)\n",
+    "\n",
+    "cv2.imshow('omg', img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
   }
  ],
  "metadata": {
