--- a/OpenCV/practice.ipynb
+++ b/OpenCV/practice.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a87d764c-01aa-433d-a430-29a046537169",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 도형 출력\n",
     "import cv2\n",
     "import numpy as np\n",
     "img = np.zeros((480, 640, 3), dtype=np.uint8)\n",
@@ -25,11 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "fbba5d51-23a0-402e-bbb9-b34f34d8b09c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 이미지 흑백 변경\n",
     "import cv2\n",
     "img = cv2.imread('img.jpg')\n",
     "img_gray = cv2.imread('img.jpg', cv2.IMREAD_GRAYSCALE)\n",
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "b4f3c4a3-88d0-4193-9bc1-be7eb5b34b52",
    "metadata": {},
    "outputs": [
@@ -50,11 +52,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "흥\n"
+      "메롱\n"
      ]
     }
    ],
    "source": [
+    "# 비디오 불러오기\n",
     "import cv2\n",
     "video = cv2.VideoCapture('video.mp4')\n",
     "\n",
@@ -74,11 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5bb2dfbf-c751-4418-9748-c0e258779868",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 텍스트 출력\n",
     "import numpy as np\n",
     "import cv2\n",
     "\n",
@@ -93,6 +97,72 @@
     "\n",
     "cv2.imshow('omg', img)\n",
     "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cf87bc90-f0f5-43d9-b233-7c9ac5a21971",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 이미지 불러오기\n",
+    "import cv2\n",
+    "img = cv2.imread('img.jpg')\n",
+    "\n",
+    "cv2.imshow('img', img)\n",
+    "cv2.waitKey()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "23a8f981-c964-41eb-a165-be32fb8cb6ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 삼각형 출력\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "img = np.zeros((460,630,3), dtype=np.uint8)\n",
+    "\n",
+    "COLOR = (255,0,0)\n",
+    "THICKNESS = 3\n",
+    "\n",
+    "# pts = np.array([[[200,300], [300,200], [400,200]], [[300,400], [300,500], [300,600]]])\n",
+    "# cv2.fillPoly(img, pts, COLOR, cv2.LINE_AA)\n",
+    "\n",
+    "pts1 = np.array([[200,200],[300,200],[300,400]])\n",
+    "# pts2 = np.array([[100,200],[200,200],[200,200]])\n",
+    "cv2.fillPoly(img, [pts1], COLOR, cv2.LINE_AA)\n",
+    "\n",
+    "cv2.imshow('img', img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "876fa83b-9045-4857-98f4-a93fcb0f6b05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "img = np.zeros((600,900,3), dtype=np.uint8)\n",
+    "\n",
+    "RADIUS = 100\n",
+    "COLOR = (255, 0, 0)\n",
+    "THICKNESS = 3\n",
+    "\n",
+    "# cv2.circle(img, (200,200), RADIUS, COLOR, THICKNESS, cv2.LINE_AA)\n",
+    "cv2.circle(img, (200,200), RADIUS, COLOR, cv2.FILLED, cv2.LINE_AA)\n",
+    "\n",
+    "cv2.imshow('circle', img)\n",
+    "cv2.waitKey()\n",
     "cv2.destroyAllWindows()"
    ]
   }
@@ -113,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
